# pr-owl

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODOS.md  llms.txt  pyproject.toml  setup
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
skills/: SKILL.md
src/pr_owl/: __init__.py  checker.py  cli.py  discovery.py  exceptions.py  fixer.py  gh.py  models.py  output.py  planner.py  state.py
tests/: conftest.py  test_checker.py  test_cli.py  test_discovery.py  test_fixer.py  test_gh.py  test_integration.py  test_models.py  test_output.py  test_planner.py  test_state.py
tests/fixtures/: pr_view_behind.json  pr_view_blocked.json  pr_view_blocked_behind.json  pr_view_clean.json  pr_view_dirty.json  pr_view_draft.json  pr_view_has_hooks.json  pr_view_mixed_checks.json  pr_view_status_context.json  pr_view_unknown_mergeable.json  pr_view_unstable.json  search_prs.json
