[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pr-owl"
dynamic = ["version"]
description = "Audit outbound GitHub PRs for mergeability and guide remediation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
pr-owl = "pr_owl.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pr_owl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_owl"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
line-length = 120
exclude = ["src/pr_owl/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["pr_owl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real GitHub API (deselect with '-m \"not integration\"')",
]
